--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- TODO: Add proper head tag to provide a page description for search
-             engines. -->
-        <title>API Superstore</title>
-        <!-- Bootstrap CSS Framework -->
-        <!-- You can remove the ``link`` tags below if you don't want to use Bootstrap with your site. If you choose to use Bootstrap, be sure to reference the resources and the Bootstrap official documentation: http://getbootstrap.com. -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <!-- End Bootstrap CSS Framework -->
+     <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+          <!-- TODO: Add proper head tag to provide a page description for search engines. -->
+          <title>API Superstore</title>
+          <!-- Bootstrap CSS Framework -->
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
           <link rel="stylesheet" href="/main.css">
-        <!-- FontAwesome (https://fontawesome.com/how-to-use/svg-with-js#basic-use) -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+          <!-- FontAwesome (https://fontawesome.com/how-to-use/svg-with-js#basic-use) -->
+          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-        <!-- TODO: replace favicon, apple-touch-icon, and tile images to best
-             support bookmarking. -->
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="favicon" href="favicon.ico">
-
+          <!-- TODO: replace favicon, apple-touch-icon, and tile images to best support bookmarking. -->
+          <link rel="apple-touch-icon" href="apple-touch-icon.png">
+          <link rel="favicon" href="favicon.ico">
     </head>
+
     <body>
           <nav id="navbar-example2" class="navbar navbar-dark bg-dark">
                <a class="navbar-brand" href="#">Navbar</a>
@@ -47,27 +43,127 @@
           </div>
           <!-- Note: If you do not see a camera icon in the heading below when you view this file in a web browser, then there is an issue with how FontAwesome is linked to this page. -->
           <h1><span class="fas fa-camera-retro"></span> Hello World!</h1>
-          <!-- TODO: Populate this page with all the content you deem
-               necessary to create a compelling product page! -->
 
           <!-- TODO: Create an area to put the explainer video. -->
           <div class="embed-responsive embed-responsive-16by9">
                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/eQw-cPOAZ98" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          
+
+          <div class="container-fluid">
+               <div class="row">
+                    <div class="col-lg-4">
+                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    </div>
+                    <div class="col-lg-4">
+                         <div class="thumbnail">
+                              <img width="100%" src="/assets/photos/woman-promo-raw.jpg">
+                         </div>
+                    </div>
+                    <div class="col-lg-4">
+                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    </div>
+               </div>
+          </div>
           <div class="paraimg1">
                <div class="ptext">
                     <span class="border-trans">Test parallax text</span>
-                    <!--<img src="/assets/photos/skate-park-raw.jpg" class="img-fluid mx-auto" alt="First image"> -->
                </div>
           </div>
 
           <h4 id="fat">@fat</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dicta reprehenderit architecto possimus sint incidunt quam corporis eligendi vero quaerat illo quae provident explicabo, nemo debitis optio omnis. Soluta, quis....</p>
+
+          <div class="container-fluid">
+               <div class="row">
+                    <div class="col-lg-4">
+                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    </div>
+                    <div class="col-lg-4">
+                         <div class="thumbnail">
+                              <img width="100%" src="/assets/photos/woman-promo-raw.jpg">
+                         </div>
+                    </div>
+               </div>
+          </div>
+          <div class="paraimg1">
+               <div class="ptext">
+                    <span class="border-trans">Test parallax text</span>
+               </div>
+          </div>
+
           <h4 id="mdo">@mdo</h4>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt quam sequi ut modi perspiciatis, quos officiis! Fuga reiciendis corporis corrupti distinctio id ut! Reiciendis iure quisquam recusandae nam possimus in....</p>
+
+          <div class="container-fluid">
+               <div class="row">
+                    <div class="col-lg-4">
+                         <div class="thumbnail">
+                              <img width="100%" src="/assets/photos/woman-promo-raw.jpg">
+                         </div>
+                    </div>
+                    <div class="col-lg-3">
+                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    </div>
+                    <div class="col-lg-2">
+                         <div class="thumbnail">
+                              <img width="100%" src="/assets/photos/woman-promo-raw.jpg">
+                         </div>
+                    </div>
+                    <div class="col-lg-3">
+                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    </div>
+               </div>
+          </div>
+          <div class="paraimg1">
+               <div class="ptext">
+                    <span class="border-trans">Test parallax text</span>
+               </div>
+          </div>
+
           <h4 id="one">one</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus libero sint aperiam fugit assumenda magnam vero fuga est, ducimus laboriosam. Sint aspernatur vitae non architecto. Tenetur impedit provident quidem vel....</p>
+          <div class="row">
+               <div class="portfolio-item col-sm-6 col-md-4">
+                    <div class="card h-100">
+                    <a href="#">
+                         <img class="card-img-top" src="" alt="">
+                    </a>
+                    <div class="card-body">
+                         <h4 class="card-title">
+                         <a href="#">Salsa & Sunshine</a>
+                         </h4>
+                         <p class="card-text">A Mohito and Bloody Mary for two. Comes with chips and dip.</p>
+                    </div>
+                    </div>
+               </div>
+               <div class="portfolio-item col-sm-6 col-md-4">
+                    <div class="card h-100">
+                    <a href="#">
+                         <img class="card-img-top" src="" alt="">
+                    </a>
+                    <div class="card-body">
+                         <h4 class="card-title">
+                         <a href="#">Pasta Pairs</a>
+                         </h4>
+                         <p class="card-text">Try our wide selection of filling pastas with a drink of your choice! Excludes our daily special items.</p>
+                    </div>
+                    </div>
+               </div>
+               <div class="portfolio-item col-sm-6 col-md-4">
+                    <div class="card h-100">
+                    <a href="#">
+                         <img class="card-img-top" src="" alt="">
+                    </a>
+                    <div class="card-body">
+                         <h4 class="card-title">
+                         <a href="#">Festive & Fruity</a>
+                         </h4>
+                         <p class="card-text">Lyman's offers a wide variety of seasonal specials to warm you up this winter. Try them before they are gone!</p>
+                    </div>
+                    </div>
+               </div>
+          </div>
+
           <h4 id="two">two</h4>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ad, incidunt cumque autem, animi maiores consequatur temporibus quia laborum odio, veritatis aliquam est itaque corrupti sunt nobis id quam nisi....</p>
           <h4 id="three">three</h4>
@@ -78,25 +174,20 @@
 
           <!-- TODO: Create an area to show features. -->
 
-          <!-- TODO: Create an area to show company contact info (phone,
-               location, etc.) -->
+          <!-- TODO: Create an area to show company contact info (phone, location, etc.) -->
 
-          <!-- TODO: Create an area that allows users to Share links to the
-               page. -->
+          <!-- TODO: Create an area that allows users to Share links to the page. -->
 
-          <!-- TODO: Create a call to action link to get users to sign up for the
-               service. -->
+          <!-- TODO: Create a call to action link to get users to sign up for the service. -->
 
           <!-- Footer -->
           <footer class="py-5 bg-dark">
-          <!-- Put the footer on every page.-->
-          <div class="container">
-            <div class="footer-flex">
-               <p class="footer-item-flex text-white">Copyright &copy; Landyachtz 2018</p>
-               <p class="footer-item-flex text-white">John Meyer</p>
-            </div>
-          </div>
-          <!-- /.container -->
+               <div class="container">
+                    <div class="footer-flex">
+                         <p class="footer-item-flex text-white">Copyright &copy; Landyachtz 2018</p>
+                         <p class="footer-item-flex text-white">John Meyer</p>
+                    </div>
+               </div>
           </footer>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
