--- a/index.html
+++ b/index.html
@@ -120,33 +120,32 @@
                <div class="portfolio-item col-sm-6 col-md-4">
                     <div class="card h-100">
                     <a href="#">
-                         <img class="card-img-top" src="" alt="">
                     </a>
                     <div class="card-body">
                          <h4 class="card-title">
-                         <a href="#">Salsa & Sunshine</a>
+                         <a href="#">Youtube</a>
                          </h4>
                          <p class="card-text">A Mohito and Bloody Mary for two. Comes with chips and dip.</p>
                     </div>
+                    <img class="card-img-bottom" src="assets/photos/skate-promo-raw.jpg" alt="">
                     </div>
                </div>
                <div class="portfolio-item col-sm-6 col-md-4">
                     <div class="card h-100">
                     <a href="#">
-                         <img class="card-img-top" src="" alt="">
                     </a>
                     <div class="card-body">
                          <h4 class="card-title">
-                         <a href="#">Pasta Pairs</a>
+                         <a href="#">Buy</a>
                          </h4>
                          <p class="card-text">Try our wide selection of filling pastas with a drink of your choice! Excludes our daily special items.</p>
                     </div>
+                    <img class="card-img-top" src="assets/photos/skate-promo-raw.jpg" alt="">
                     </div>
                </div>
                <div class="portfolio-item col-sm-6 col-md-4">
                     <div class="card h-100">
                     <a href="#">
-                         <img class="card-img-top" src="" alt="">
                     </a>
                     <div class="card-body">
                          <h4 class="card-title">
@@ -154,7 +153,27 @@
                          </h4>
                          <p class="card-text">Lyman's offers a wide variety of seasonal specials to warm you up this winter. Try them before they are gone!</p>
                     </div>
+                    <img class="card-img-top" src="assets/photos/skate-promo-raw.jpg" alt="">
                     </div>
+               </div>
+          </div>
+
+          <div class="row">
+               <div class=" col-lg-3">
+                    <img>
+                    <a>a</a>
+               </div>
+               <div class=" col-lg-3">
+                    <img>
+                    <a>b</a>
+               </div>
+               <div class=" col-lg-3">
+                    <img>
+                    <a>c</a>
+               </div>
+               <div class=" col-lg-3">
+                    <img>
+                    <a>d</a>
                </div>
           </div>
 
