added some text changes over break at work

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-lg-4">
                          <div class="thumbnail">
-                              <img width="100%" src="/assets/photos/woman-promo-1920.jpg">
+                              <img width="100%" src="assets/photos/woman-promo-1920.jpg">
                          </div>
                     </div>
                </div>
@@ -94,37 +94,37 @@
                <div class="row">
                     <div class="col-lg-4 align-self-center">
                          <div class="thumbnail">
-                              <img width="100%" src="/assets/photos/ly-dinghy-400.jpg">
+                              <img width="100%" src="assets/photos/ly-dinghy-400.jpg">
                          </div>
                     </div>
                     <div class="col-lg-3 align-self-center">
-                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                         <h3>Life is too short to not have a Dinghy in your collection. And if you have a Dinghy then you need a TURBO Dinghy!</h3>
                     </div>
                     <div class="col-lg-2 align-self-center">
                          <div class="thumbnail">
-                              <img width="100%" src="/assets/photos/woman-promo-1920.jpg" class="rounded-circle">
+                              <img width="100%" src="assets/photos/woman-promo-1920.jpg" class="rounded-circle">
                          </div>
                     </div>
                     <div class="col-lg-2 align-self-center">
-                         <p class="text-center">Check out our expansive line of skateboards, longboards, and apparel to make every day a fun day!</p>
+                         <p class="text-center">This board really is the best of both worlds. Any opportunity I get I’m out cruising. -Jessica</p>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-4">
                          <div class="thumbnail">
-                              <img width="100%" src="/assets/photos/ly-switch-400.jpg">
+                              <img width="100%" src="assets/photos/ly-switch-400.jpg">
                          </div>
                     </div>
-                    <div class="col-lg-3 align-self-end">
-                         <h1>“Making quality skateboards that will improve your life.”</h1>
+                    <div class="col-lg-3 align-self-center">
+                         <h3>Year after year, the Switch proves to be one of our most popular boards. Exceptionally stable, this is a great option to progress your freeriding skills on.</h3>
                     </div>
                     <div class="col-lg-2 align-self-center">
                     <div class="thumbnail">
-                         <img width="100%" src="/assets/photos/woman-promo-1920.jpg" class="rounded-circle">
+                         <img width="100%" src="assets/photos/woman-promo-1920.jpg" class="rounded-circle">
                     </div>
                     </div>
                     <div class="col-lg-2 align-self-center">
-                         <p class="text-center">Check out our expansive line of skateboards, longboards, and apparel to make every day a fun day!</p>
+                         <p class="text-center">“This drop board is so stable and rides so smooth. I think I may prefer it over my first love sector nine.” -Josh S</p>
                     </div>
                </div>
           </div>
