--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
           <!-- TODO: Add proper head tag to provide a page description for search engines. -->
-          <title>API Superstore</title>
+          <title>Landyachtz</title>
           <!-- Bootstrap CSS Framework -->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
           <link rel="stylesheet" href="/main.css">
@@ -19,7 +19,7 @@
 
     <body>
           <nav id="navbar-example2" class="navbar navbar-dark bg-dark">
-               <a class="navbar-brand" href="#">Navbar</a>
+               <a class="navbar-brand" href="#"><img width="45" height="56" src="assets/logos/lyLogo.jpg"> Landyachtz</a>
                <ul class="nav nav-pills">
                <li class="nav-item">
                     <a class="nav-link" href="#watch">Watch</a>
@@ -178,20 +178,20 @@
 
           <div class="row">
                <div class=" col-lg-3">
-                    <img>
-                    <a>a</a>
+                    <img src="assets/logos/facebook.png">
+                    <a>Facebook</a>
                </div>
                <div class=" col-lg-3">
-                    <img>
-                    <a>b</a>
+                    <img src="assets/logos/twitter.png">
+                    <a>Twitter</a>
                </div>
                <div class=" col-lg-3">
-                    <img>
-                    <a>c</a>
+                    <img src="assets/logos/instagram.png">
+                    <a>Instagram</a>
                </div>
                <div class=" col-lg-3">
-                    <img>
-                    <a>d</a>
+                    <img src="assets/logos/youtube.png">
+                    <a>Youtube</a>
                </div>
           </div>
 
