--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div id="explore" class="paraimg1">
                <div class="ptext">
-                    <span class="border-trans">Test parallax text</span>
+                    <span class="border-trans">Skate and Explore</span>
                </div>
           </div>
           
@@ -86,7 +86,7 @@
           </div>
           <div id="reviews" class="paraimg2">
                <div class="ptext">
-                    <span class="border-trans">Test parallax text</span>
+                    <span class="border-trans">Testimonials</span>
                </div>
           </div>
 
@@ -130,7 +130,7 @@
           </div>
           <div id="buy" class="paraimg3">
                <div class="ptext">
-                    <span class="border-trans">Test parallax text</span>
+                    <span class="border-trans">Find Out More</span>
                </div>
           </div>
  
