--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-lg-4">
                          <div class="thumbnail">
-                              <img width="100%" src="assets/photos/woman-promo-1920.jpg">
+                              <img width="98%" class="rounded" src="assets/photos/woman-promo-1920.jpg">
                          </div>
                     </div>
                </div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-lg-2 align-self-center">
                          <div class="thumbnail">
-                              <img width="100%" src="assets/photos/woman-promo-1920.jpg" class="rounded-circle">
+                              <img width="100%" src="assets/photos/lady-promo-400.jpg" class="rounded-circle">
                          </div>
                     </div>
                     <div class="col-lg-2 align-self-center">
@@ -122,7 +122,7 @@
                     </div>
                     <div class="col-lg-2 align-self-center">
                     <div class="thumbnail">
-                         <img width="100%" src="assets/photos/woman-promo-1920.jpg" class="rounded-circle">
+                         <img width="100%" src="assets/photos/man-promo-400.jpg" class="rounded-circle">
                     </div>
                     </div>
                     <div class="col-lg-2 align-self-center">
@@ -202,19 +202,12 @@
                <div class="col-0 col-lg-1" ></div>
           </div>
 
-          <!-- TODO: Create an area to put the long product description. -->
-
-          <!-- TODO: Create an area to put customer testimonials. -->
-
-          <!-- TODO: Create an area to show features. -->
-
           <!-- TODO: Create an area to show company contact info (phone, location, etc.) -->
 
           <!-- TODO: Create an area that allows users to Share links to the page. -->
 
           <!-- TODO: Create a call to action link to get users to sign up for the service. -->
 
-          <!-- Footer -->
           <footer class="py-5 bg-dark">
                <div class="container">
                     <div class="footer-flex">
