--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <title>Landyachtz</title>
           <!-- Bootstrap CSS Framework -->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-          <link rel="stylesheet" href="/main.css">
+          <link rel="stylesheet" href="main.css">
           <!-- FontAwesome (https://fontawesome.com/how-to-use/svg-with-js#basic-use) -->
           <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
